--- a/package.json
+++ b/package.json
@@ -10,8 +10,26 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
+    "@primevue/forms": "^4.2.5",
+    "@primevue/themes": "^4.2.5",
+    "@tailwindcss/vite": "^4.0.4",
     "nuxt": "^3.15.4",
+    "primeicons": "^7.0.0",
+    "primevue": "^4.2.5",
+    "tailwindcss": "^4.0.4",
+    "tailwindcss-primeui": "^0.4.0",
     "vue": "latest",
     "vue-router": "latest"
+  },
+  "devDependencies": {
+    "@commitlint/cli": "19.6.1",
+    "@commitlint/config-conventional": "19.6.0",
+    "@nuxt/eslint": "0.7.5",
+    "@primevue/nuxt-module": "^4.2.5",
+    "@vitejs/plugin-vue": "5.2.1",
+    "eslint": "9.18.0",
+    "typescript": "5.7.3",
+    "vitest": "3.0.4",
+    "vue-tsc": "2.1.6"
   }
 }
