--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
+    "@pinia/nuxt": "^0.10.1",
     "@primevue/forms": "^4.2.5",
     "@primevue/themes": "^4.2.5",
     "@tailwindcss/vite": "^4.0.4",
     "nuxt": "^3.15.4",
+    "pinia": "^3.0.1",
     "primeicons": "^7.0.0",
     "primevue": "^4.2.5",
     "tailwindcss": "^4.0.4",
