--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
+    "@nuxtjs/supabase": "1.4.6",
+    "@supabase/supabase-js": "^2.49.1",
     "@pinia/nuxt": "^0.10.1",
     "@primevue/forms": "^4.2.5",
     "@primevue/themes": "^4.2.5",
