--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "tailwindcss": "^4.0.4",
     "tailwindcss-primeui": "^0.4.0",
     "vue": "latest",
-    "vue-router": "latest"
+    "vue-router": "latest",
+    "zod": "^3.24.2"
   },
   "devDependencies": {
     "@commitlint/cli": "19.6.1",
